k8s/infra/flux-system/flux-operator/base/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  hostnames:
    - flux.example.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway-api
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: flux-operator
          port: 9080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
